{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 12,
  "lineage": "344a33fe-8dd4-db33-4c17-2a4ccaf3a695",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc6cf99992956a4a",
            "arn": "arn:aws:ec2:us-east-1:442426850454:instance/i-02a9a80c5faa07658",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a9a80c5faa07658",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09a9fa59c8a95722e",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-3-80-212-229.compute-1.amazonaws.com",
            "public_ip": "3.80.212.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d7749f8643a4c91b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088586064d3cc6b6d",
            "tags": {
              "Name": "terraform-vpc-lab-web",
              "Project": "terraform-vpc-lab"
            },
            "tags_all": {
              "Name": "terraform-vpc-lab-web",
              "Project": "terraform-vpc-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0faacebfdf0743be9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442426850454:internet-gateway/igw-06513a1bcd0376dcf",
            "id": "igw-06513a1bcd0376dcf",
            "owner_id": "442426850454",
            "tags": {
              "Name": "terraform-vpc-lab-igw",
              "Project": "terraform-vpc-lab"
            },
            "tags_all": {
              "Name": "terraform-vpc-lab-igw",
              "Project": "terraform-vpc-lab"
            },
            "vpc_id": "vpc-0db5bb84708bf3269"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06513a1bcd0376dcf",
            "id": "r-rtb-0fb496e448326c5ae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fb496e448326c5ae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442426850454:route-table/rtb-0fb496e448326c5ae",
            "id": "rtb-0fb496e448326c5ae",
            "owner_id": "442426850454",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06513a1bcd0376dcf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-vpc-lab-public-rt",
              "Project": "terraform-vpc-lab"
            },
            "tags_all": {
              "Name": "terraform-vpc-lab-public-rt",
              "Project": "terraform-vpc-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db5bb84708bf3269"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03da35496e2834e8b",
            "route_table_id": "rtb-0fb496e448326c5ae",
            "subnet_id": "subnet-088586064d3cc6b6d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442426850454:security-group/sg-0faacebfdf0743be9",
            "description": "Allow HTTP inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0faacebfdf0743be9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-vpc-lab-web-sg",
            "name_prefix": "",
            "owner_id": "442426850454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-vpc-lab-web-sg",
              "Project": "terraform-vpc-lab"
            },
            "tags_all": {
              "Name": "terraform-vpc-lab-web-sg",
              "Project": "terraform-vpc-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db5bb84708bf3269"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442426850454:subnet/subnet-088586064d3cc6b6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088586064d3cc6b6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442426850454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-lab-public-subnet",
              "Project": "terraform-vpc-lab"
            },
            "tags_all": {
              "Name": "terraform-vpc-lab-public-subnet",
              "Project": "terraform-vpc-lab"
            },
            "vpc_id": "vpc-0db5bb84708bf3269"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442426850454:vpc/vpc-0db5bb84708bf3269",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008654b7ca8cc5d3d",
            "default_route_table_id": "rtb-053d57bdb14c0bde5",
            "default_security_group_id": "sg-051b2fdfa4eaec8da",
            "dhcp_options_id": "dopt-04d4efe14103f31f4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db5bb84708bf3269",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053d57bdb14c0bde5",
            "owner_id": "442426850454",
            "tags": {
              "Name": "terraform-vpc-lab-vpc",
              "Project": "terraform-vpc-lab"
            },
            "tags_all": {
              "Name": "terraform-vpc-lab-vpc",
              "Project": "terraform-vpc-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}